# RagnarNotes

./: .eslintrc.cjs  .gitignore  .prettierrc  README.md  git-push.sh  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: main.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  models.rs
src-tauri/src/commands/: app.rs  fs.rs
src/__tests__/: setup.ts
src/__tests__/stores/: appStore.test.ts  editorStore.test.ts  notesStore.test.ts  searchStore.test.ts
src/__tests__/utils/: cn.test.ts  format.test.ts  keyboard.test.ts  markdown.test.ts  sanitize.test.ts
src/components/editor/: EditorToolbar.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  StatusBar.tsx
src/components/features/: BacklinksPanel.tsx  BulkExportModal.tsx  CommandPalette.tsx  ExportModal.tsx  FolderTree.tsx  NoteHistory.tsx  NoteInfoPanel.tsx  OutlinePanel.tsx  SettingsPanel.tsx  StorageManager.tsx  WordGoalWidget.tsx
src/components/layout/: EditorPane.tsx  NoteList.tsx  ResizeHandle.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useAutoSave.ts  useClickOutside.ts  useDebounce.ts  useKeyboardShortcut.ts  useLocalStorage.ts  useResizable.ts  useTheme.ts
src/lib/: seedData.ts  tauri.ts
src/stores/: appStore.ts  editorStore.ts  notesStore.ts  searchStore.ts
src/styles/: globals.css  highlight.css
src/types/: html2pdf.d.ts  index.ts  jszip.d.ts  vite-env.d.ts
src/utils/: cn.ts  exportPdf.ts  fonts.ts  format.ts  keyboard.ts  markdown.ts  sanitize.ts
(+11 files in other folders)
